Reverted z-index fixes from 9f30ef57 because of f35d1ecb

--- a/assets/js/components/Specializations/SpecializationLine/traitConnection.css
+++ b/assets/js/components/Specializations/SpecializationLine/traitConnection.css
@@ -1,6 +1,7 @@
 .line {
     width: 39px;
     height: 2px;
+    z-index: 4;
     background: white;
 }
 .lineInvisible {
