--- a/assets/js/components/Specializations/SpecializationLine/traitTier.css
+++ b/assets/js/components/Specializations/SpecializationLine/traitTier.css
@@ -5,6 +5,6 @@
     z-index: 5;
 }
 
-.iconsWrapper {
+.majorIcons {
     z-index: 5;
 }
